# policyengine.py

./: .buildinfo  .env.example  .gitignore  AGENTS.md  BREAKDOWN_PARENTS_ANALYSIS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  US_PARAMETER_LABEL_ANALYSIS.md  api_docs.ipynb  basic_rate_17p_analysis.py  changelog.yaml  changelog_entry.yaml  data_write_testing.md  db_init.py  example_uk.ipynb  example_uk.py  example_us.ipynb  genindex.html  index.html  intro.html  maintaining.html  objects.inv  orchestrator.py  paper-preview.html  paper.bib  paper.html  paper.md  policyengine-bundle.json  policyengine-stack.toml  pr-242-review-findings.md  py-modindex.html  pyproject.toml  run.py  schema.html  search.html  searchindex.js  (+15 more)
.claude/: policyengine-guide.md  quick-reference.md
.github/: CONTRIBUTING.md  bump_version.py  capture-version.sh  check-changelog.sh  check_bundle_consistency.py  copilot-instructions.md  dispatch-policyengine-release.sh  fetch_version.py  publish-git-tag.sh  smoke_release_manifest_sync.py  vendor_release_bundle.py  wait-for-pypi.sh  write_policyengine_wheel_attestation.py
.github/workflows/: any_changes.yaml  changelog_entry.yaml  code_changes.yaml  deploy.yml  docs.yml  draft-pdf.yml  pr.yml  pr_code_changes.yaml  pr_docs_changes.yaml  publish.yaml  publish_documentation.yaml  publish_package.yaml  pull_request.yaml  push.yaml  push.yml  release_manifest_sync_smoke.yaml  versioning.yaml
Budgetary/: byprogram.html  index.html  overall.html
Distributional/: index.html
Distributional/ByIncomeDecile/: average.html  index.html  relative.html
Distributional/ByWealthDecile/: average.html  index.html  relative.html
EconomicImpact/: index.html  intro.html
Inequality/: index.html  inequality.html
Poverty/: index.html
Poverty/deep/: byage.html  bygender.html  (+1 more)
WinnersAndLosers/: byincomedecile.html  bywealthdecile.html  index.html
_sources/: maintaining.ipynb
basic/: calculate_economy_comparison.html  calculate_household_comparison.html  calculate_single_economy.html  calculate_single_household.html
changelog.d/: 255.added  263.changed.md  289.added.md  374.fixed.md  378.added.md  388.added.md  391.changed.md  402.added.md  404.added.md  406.changed.md  410.changed.md  413.changed.md  415.added.md  415.fixed.md  419.changed.md  421.fixed.md  447.added.md  453.fixed.md  464.fixed.md  466.fixed.md  468.added.md  478.fixed.md  485.breaking.md  485.fixed.md  488.changed.md  add-labor-supply-response-output.added.md  add-preservation-mirror-fields.added.md  add-release-bundle-ai-harness.added.md  add-uk-detailed-budget-program-statistics.changed.md  add-uk-wealth-decile-outputs.added.md  allow-unmanaged-local-datasets.added.md  bump-country-pins.fixed.md  bump-pe-core-3.25.fixed.md  bump-uk-bundle.changed.md  bump-us-pin-1.653.3.changed.md  bundle-drop-us-data-package.fixed.md  bundle-runtime.changed.md  bundle-system.added.md  certified-bundle-manifest.changed.md  certify-uk-populace-uk-2023-72aeefc-20260611.changed.md  (+94 more)
concepts/: extending.html  simulation.html
contributing/: index.html  intro.html
docs/: .gitignore  00-datasets.ipynb  01-quickstart-uk.ipynb  02-quickstart-us.ipynb  03-extending.ipynb  04-architecture.ipynb  _config.yml  _quarto.yml  _toc.yml  advanced-outputs.md  bundles.md  core-concepts.md  countries.md  country-models-uk.md  country-models-us.md  custom_outputs.md  data-publishing-design.md  dev.md  economic-impact-analysis.md  examples.md  getting-started.md  households.md  impact-analysis.md  index.ipynb  index.md  intro.md  maintaining.ipynb  microsim.md  models.ipynb  models.md  myst.yml  outputs.md  quickstart.ipynb  reforms.md  regions-and-scoping.md  regions.md  release-bundles.md  run-records.md  schema.ipynb  stacks.md  (+2 more)
examples/: belgium_axiom_pilot.py  custom_report_item.py  employment_income_variation.py  employment_income_variation_uk.py  employment_income_variation_us.py  household_impact_example.py  income_bands.py  income_bands_uk.py  income_distribution_us.py  paper_repro_uk.py  policy_change.py  policy_change_uk.py  run_migration.py  speedtest_us_simulation.py  us_budgetary_impact.py
outputs/: calculate_average_earnings.html
policyengine/: README.MD  __init__.py  constants.py  entities.py  policyengine.py  reforms.py  simulation.py  simulation_results.py
policyengine-py-skill/: SKILL.md
reference/: calculate.html  calculate_economy_comparison.html  calculate_household_comparison.html  calculate_single_economy.html  calculate_single_household.html  parameters_uk.html  parameters_us.html  simulation.html
scripts/: bundle.py  certify_data_release.py  check_data_staleness.py  export_bundle_release_assets.py  export_stack_release_assets.py  generate_bundle_artifacts.py  generate_stack_artifacts.py  generate_trace_tros.py  import_policyengine_bundle.py  prepare_bundle_update.py  prepare_package_bundle_update.py  prepare_stack_update.py  refresh_release_bundle.py  refresh_release_bundles.py  test_place_simulations.py  us_reform_approach_comparison.py  validate_release_bundle.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_aggregate_change.py  test_aggregate_utils.py  test_base_extraction_snapshot.py  test_be_axiom_pilot.py  test_budgetary_impact.py  test_bump_version.py  test_bundle.py  test_bundle_metadata.py  test_bundle_refresh.py  test_bundle_update.py  test_cache.py  test_certify_data_release.py  test_change_aggregate.py  test_cliff_impact.py  test_cliff_impact_analysis.py  test_congressional_district_impact.py  test_constituency_impact.py  test_crfb_scenario_contract.py  test_database.py  test_database_constant.py  test_database_init.py  test_database_models.py  test_database_postgres.py  test_database_simple.py  test_dataset_persistence.py  test_dataset_sources.py  test_decile_grouping.py  test_derivations.py  test_dict_reforms_on_simulation.py  test_economic_impact_outputs.py  test_entity_mapping.py  test_entity_utils.py  test_entity_utils_characterization.py  test_errors.py  test_execution.py  test_extra_variables.py  test_filtering.py  (+55 more)
(+606 files in other folders)
