[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine"
version = "3.1.3"
description = "A package to conduct policy analysis using PolicyEngine tax-benefit models."
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "microdf_python",
    "plotly>=5.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
uk = [
    "policyengine_core>=3.10",
    "policyengine-uk>=2.51.0",
]
us = [
    "policyengine_core>=3.10",
    "policyengine-us>=1.213.1",
]
dev = [
    "black",
    "pytest",
    "furo",
    "autodoc_pydantic",
    "jupyter-book",
    "yaml-changelog>=0.1.7",
    "itables",
    "build",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.5.0",
    "policyengine_core>=3.10",
    "policyengine-uk>=2.51.0",
    "policyengine-us>=1.213.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"policyengine" = ["**/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 79
target-version = "py313"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "W",  # pycodestyle warnings
  "UP", # pyupgrade
]
ignore = ["E501"]  # Ignore line length errors

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
