[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine"
version = "3.4.1"
description = "A package to conduct policy analysis using PolicyEngine tax-benefit models."
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "microdf_python>=1.2.1",
    "plotly>=5.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
uk = [
    "policyengine_core>=3.23.6",
    "policyengine-uk==2.74.0",
]
us = [
    "policyengine_core>=3.23.6",
    "policyengine-us==1.602.0",
]
dev = [
    "pytest",
    "furo",
    "autodoc_pydantic",
    "jupyter-book",
    "yaml-changelog>=0.1.7",
    "itables",
    "build",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.0",
    "policyengine_core>=3.23.6",
    "policyengine-uk==2.74.0",
    "policyengine-us==1.602.0",
    "towncrier>=24.8.0",
    "mypy>=1.11.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"policyengine" = ["**/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "W",  # pycodestyle warnings
  "UP", # pyupgrade
]
ignore = ["E501"]  # Ignore line length errors

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.towncrier]
package = "policyengine"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
