[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine"
version = "3.5.0"
description = "A package to conduct policy analysis using PolicyEngine tax-benefit models."
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "microdf_python>=1.2.1",
    "plotly>=5.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
]

[project.scripts]
policyengine = "policyengine.cli:main"

[project.optional-dependencies]
uk = [
    "policyengine_core>=3.25.0",
    "policyengine-uk==2.88.0",
]
us = [
    "policyengine_core>=3.25.0",
    "policyengine-us==1.653.3",
]
dev = [
    "pytest",
    "furo",
    "autodoc_pydantic",
    "jupyter-book",
    "yaml-changelog>=0.1.7",
    "itables",
    "build",
    "jsonschema>=4.0.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.0",
    "policyengine_core>=3.25.0",
    "policyengine-uk==2.88.0",
    "policyengine-us==1.653.3",
    "towncrier>=24.8.0",
    "mypy>=1.11.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"policyengine" = ["**/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "W",  # pycodestyle warnings
  "UP", # pyupgrade
]
ignore = [
  "E501",  # Ignore line length errors
  # The following pyupgrade rules would require Python 3.10+, but we
  # support 3.9+. Re-enable these once the 3.9 floor is dropped.
  "UP006",  # prefer `list` over `List` — OK on 3.9 at runtime, but for
            # pydantic models we use typing.List for consistency
  "UP007",  # prefer `X | Y` over `Union[X, Y]` — needs 3.10+
  "UP035",  # `typing.List` is deprecated — same as UP006
  "UP045",  # prefer `X | None` over `Optional[X]` — needs 3.10+
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.towncrier]
package = "policyengine"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
